feat: add page registration (some check is not)

--- a/pages/profile/profile.html
+++ b/pages/profile/profile.html
@@ -31,6 +31,8 @@
         </div>     
     </header>
     <main>
+        <a href="/pages/registration/registration.html">регистрация</a>
+        <a href="/pages/authorization/authorization.html">авторизация</a>
         <section class="personal">
             <div class="personal-box">
                 <div id="information" class="personal-container">
