--- a/pages/registration/registration.html
+++ b/pages/registration/registration.html
@@ -98,7 +98,7 @@
             <a href="/pages/FAQ/FAQ.html" class="text-medium-30" data-i18n-common="footer.menu.FAQ">FAQ</a>
         </div>
     </footer>
-    <script src="../../js/registration/registration.js"></script>
+    <script type="module" src="../../js/registration/registration.js"></script>
     <script type="module" src="../../js/main.js"></script>
 </body>
 </html>
