fix: fix all link on page

--- a/pages/authorization/authorization.html
+++ b/pages/authorization/authorization.html
@@ -14,16 +14,16 @@
     </div>
     <header>
         <nav>
-            <a href="/pages/services/services.html" class="half">
+            <a href="../../pages/services/services.html" class="half">
                 <p class="text-medium-30" data-i18n-common="header.menu.services">Our services</p>
                 <span></span>
             </a>
-            <a href= "/index.html" class="text-medium-30" data-i18n-common="header.menu.home">Home</a>
-            <a href="/pages/gallery/gallery.html" class="text-medium-30" data-i18n-common="header.menu.gallery">Gallery of works</a>
-            <a href="/pages/contacts/contacts.html" class="text-medium-30" data-i18n-common="header.menu.contacts">Contacts</a>
-            <a href="/pages/FAQ/FAQ.html" class="text-medium-30" data-i18n-common="header.menu.FAQ">FAQ</a>
+            <a href= "../../index.html" class="text-medium-30" data-i18n-common="header.menu.home">Home</a>
+            <a href="../../pages/gallery/gallery.html" class="text-medium-30" data-i18n-common="header.menu.gallery">Gallery of works</a>
+            <a href="../../pages/contacts/contacts.html" class="text-medium-30" data-i18n-common="header.menu.contacts">Contacts</a>
+            <a href="../../pages/FAQ/FAQ.html" class="text-medium-30" data-i18n-common="header.menu.FAQ">FAQ</a>
             <button class="text-medium-30" data-i18n-common="header.menu.setting">Setting</button>
-            <a href="/pages/profile/profile.html" class="text-medium-30" data-i18n-common="header.menu.profile">Profile</a>
+            <a href="../../pages/profile/profile.html" class="text-medium-30" data-i18n-common="header.menu.profile">Profile</a>
         </nav> 
         <div class="burger-menu">
             <div></div><div></div><div></div>
@@ -54,14 +54,14 @@
     <footer>
         <p class="text-demi-s16-h24-l5" data-i18n-common="footer.root">2025 © Detailing Workshop. All rights reserved.</p>
         <div class="nav">
-            <a href="/pages/services/services.html" class="half">
+            <a href="../../pages/services/services.html" class="half">
                 <p class="text-medium-30" data-i18n-common="footer.menu.services">Our services</p>
                 <span></span>
             </a>
-            <a href="/index.html" class="text-medium-30" data-i18n-common="footer.menu.home">Home</a>
-            <a href="/pages/gallery/gallery.html" class="text-medium-30" data-i18n-common="footer.menu.gallery">Gallery of works</a>
-            <a href="/pages/contacts/contacts.html" class="text-medium-30" data-i18n-common="footer.menu.contacts">Contacts</a>
-            <a href="/pages/FAQ/FAQ.html" class="text-medium-30" data-i18n-common="footer.menu.FAQ">FAQ</a>
+            <a href="../../index.html" class="text-medium-30" data-i18n-common="footer.menu.home">Home</a>
+            <a href="../../pages/gallery/gallery.html" class="text-medium-30" data-i18n-common="footer.menu.gallery">Gallery of works</a>
+            <a href="../../pages/contacts/contacts.html" class="text-medium-30" data-i18n-common="footer.menu.contacts">Contacts</a>
+            <a href="../../pages/FAQ/FAQ.html" class="text-medium-30" data-i18n-common="footer.menu.FAQ">FAQ</a>
         </div>
     </footer>
     <script type="module" src="../../js/authorization/authorization.js"></script>
