--- a/pages/gallery/gallery.html
+++ b/pages/gallery/gallery.html
@@ -18,12 +18,12 @@
                 <p class="text-medium-30" data-i18n-common="header.menu.services">Our services</p>
                 <span></span>
             </a>
-            <a href= "/index.html" class="text-medium-30" data-i18n-common="header.menu.home">Home</a>
-            <a href="/pages/gallery/gallery.html" class="text-medium-30" data-i18n-common="header.menu.gallery">Gallery of works</a>
-            <a href="/pages/contacts/contacts.html" class="text-medium-30" data-i18n-common="header.menu.contacts">Contacts</a>
-            <a href="/pages/FAQ/FAQ.html" class="text-medium-30" data-i18n-common="header.menu.FAQ">FAQ</a>
+            <a href= "../../index.html" class="text-medium-30" data-i18n-common="header.menu.home">Home</a>
+            <a href="../../pages/gallery/gallery.html" class="text-medium-30" data-i18n-common="header.menu.gallery">Gallery of works</a>
+            <a href="../../pages/contacts/contacts.html" class="text-medium-30" data-i18n-common="header.menu.contacts">Contacts</a>
+            <a href="../../pages/FAQ/FAQ.html" class="text-medium-30" data-i18n-common="header.menu.FAQ">FAQ</a>
             <button class="text-medium-30" data-i18n-common="header.menu.setting">Setting</button>
-            <a href="/pages/profile/profile.html" class="text-medium-30" data-i18n-common="header.menu.profile">Profile</a>
+            <a href="../../pages/profile/profile.html" class="text-medium-30" data-i18n-common="header.menu.profile">Profile</a>
         </nav> 
         <div class="burger-menu">
             <div></div><div></div><div></div>
@@ -112,10 +112,10 @@
                 <p class="text-medium-30" data-i18n-common="footer.menu.services">Our services</p>
                 <span></span>
             </a>
-            <a href="/index.html" class="text-medium-30" data-i18n-common="footer.menu.home">Home</a>
-            <a href="/pages/gallery/gallery.html" class="text-medium-30" data-i18n-common="footer.menu.gallery">Gallery of works</a>
-            <a href="/pages/contacts/contacts.html" class="text-medium-30" data-i18n-common="footer.menu.contacts">Contacts</a>
-            <a href="/pages/FAQ/FAQ.html" class="text-medium-30" data-i18n-common="footer.menu.FAQ">FAQ</a>
+            <a href="../../index.html" class="text-medium-30" data-i18n-common="footer.menu.home">Home</a>
+            <a href="../../pages/gallery/gallery.html" class="text-medium-30" data-i18n-common="footer.menu.gallery">Gallery of works</a>
+            <a href="../../pages/contacts/contacts.html" class="text-medium-30" data-i18n-common="footer.menu.contacts">Contacts</a>
+            <a href="../../pages/FAQ/FAQ.html" class="text-medium-30" data-i18n-common="footer.menu.FAQ">FAQ</a>
         </div>
     </footer>
     <script type="module" src="../../js/gallery/main.js"></script>
