fix; fix js code location rebase

--- a/pages/gallery/gallery.html
+++ b/pages/gallery/gallery.html
@@ -14,7 +14,7 @@
     </div>
     <header>
         <nav>
-            <a href="/pages/services/services.html" class="half">
+            <a href="../../pages/services/services.html" class="half">
                 <p class="text-medium-30" data-i18n-common="header.menu.services">Our services</p>
                 <span></span>
             </a>
