feat: add change password

--- a/pages/gallery/gallery.html
+++ b/pages/gallery/gallery.html
@@ -108,7 +108,7 @@
     <footer>
         <p class="text-demi-s16-h24-l5" data-i18n-common="footer.root">2025 © Detailing Workshop. All rights reserved.</p>
         <div class="nav">
-            <a href="/pages/services/services.html" class="half">
+            <a href="../../pages/services/services.html" class="half">
                 <p class="text-medium-30" data-i18n-common="footer.menu.services">Our services</p>
                 <span></span>
             </a>
