--- a/pages/profile/profile.html
+++ b/pages/profile/profile.html
@@ -44,12 +44,13 @@
                     <div class="personal-container-text"></div>
                     <div class="personal-password">
                         <p class="text-demi-s14-l5" data-i18n="personal.text.change">change password</p>
-                        <input type="text" placeholder="old password" data-i18n="personal.placeholder.old">
-                        <input type="text" placeholder="new password" data-i18n="personal.placeholder.new">
-                        <button class="half">
+                        <input type="text" id="old" placeholder="old password" data-i18n="personal.placeholder.old">
+                        <input type="text" id="new" placeholder="new password" data-i18n="personal.placeholder.new">
+                        <button class="half" id="change" type="button">
                             <p class="text-demi-24-l5" data-i18n="personal.button.change">Change</p>
                             <span></span>
                         </button>
+                        
                     </div>
                 </div>
                 <div id="everything" class="personal-container">
