--- a/pages/profile/profile.html
+++ b/pages/profile/profile.html
@@ -31,13 +31,22 @@
         </div>     
     </header>
     <main>
-        <a href="../../pages/registration/registration.html">регистрация</a>
-        <a href="../../pages/authorization/authorization.html">авторизация</a>
         <section class="personal">
             <div class="personal-box">
                 <div id="information" class="personal-container">
                     <p class="text-demi-30-l5" data-i18n="personal.header.information">personal information</p>
                     <div class="personal-container-data"></div>
+                    <div class="personal-guest">
+                        <p class="text-demi-s14-h20-l5" data-i18n="">You are not logged in at the moment!<br>Please log in on the site if you have an account. Otherwise, register!</p>
+                        <a class="half" href="../../pages/authorization/authorization.html">
+                            <p class="text-demi-24-l5" data-i18n="">Authorization</p>
+                            <span></span>
+                        </a>
+                        <a class="half" href="../../pages/registration/registration.html">
+                            <p class="text-demi-24-l5" data-i18n="">Registration</p>
+                            <span></span>
+                        </a>
+                    </div>
                 </div>
                 <div id="credentials" class="personal-container">
                     <p class="text-demi-30-l5" data-i18n="personal.header.credentials">account credentials</p>
