feat: add api for section question & add api for page FAQ

--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
             </div>
             <div class="question-box">
                 <div>
-                    <input type="text" placeholder="name" data-i18n-common="question.placeholder.name">
-                    <input type="text" placeholder="phone" data-i18n-common="question.placeholder.phone">
+                    <input type="text" placeholder="name" data-i18n-common="question.placeholder.name" title="Необязательное поле">
+                    <input type="text" placeholder="phone" data-i18n-common="question.placeholder.phone" title="Необязательное поле">
                 </div>
                 <div>
-                    <textarea class="question-box-message" placeholder="Question about design, tuning, etc." data-i18n-common="question.placeholder.quest"></textarea>    
+                    <textarea class="question-box-message" placeholder="Question about design, tuning, etc." data-i18n-common="question.placeholder.quest" id="questionText"></textarea>    
                     <div class="question-social">
                         <a href="" class="icon-container">
                             <img src="./assets/icons/telegram.svg" alt="">
@@ -119,7 +119,7 @@
                             <img src="./assets/icons/vk.svg" alt="">
                         </a>
                     </div>
-                    <button class="half">
+                    <button class="half" id="sendQuestion">
                         <p class="text-medium-30-l5" data-i18n-common="question.send">SEND</p>
                         <span></span>
                     </button>
