--- a/pages/contacts/contacts.html
+++ b/pages/contacts/contacts.html
@@ -66,7 +66,7 @@
                     <input type="text" placeholder="phone" data-i18n-common="question.placeholder.phone">
                 </div>
                 <div>
-                    <textarea class="question-box-message" placeholder="Question about design, tuning, etc." data-i18n-common="question.placeholder.quest"></textarea>    
+                    <textarea class="question-box-message" placeholder="Question about design, tuning, etc." data-i18n-common="question.placeholder.quest" id="questionText"></textarea>    
                     <div class="question-social">
                         <a href="" class="icon-container">
                             <img src="../../assets/icons/telegram.svg" alt="">
@@ -78,7 +78,7 @@
                             <img src="../../assets/icons/vk.svg" alt="">
                         </a>
                     </div>
-                    <button class="half">
+                    <button class="half" id="sendQuestion">
                         <p class="text-medium-30-l5" data-i18n-common="question.send">SEND</p>
                         <span></span>
                     </button>
