fix: fix link & i18n on page home

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <p class="text-bold-150" data-i18n="preview.upText">CAR MUSC</p>
             <div class="separators"></div>
             <p class="text-medium-36" data-i18n="preview.downText">Car detailing: perfect cleanliness and body protection. Trust us to take care of your car!</p>
-            <a href="" class="half">
+            <a href="./pages/services/services.html" class="half">
                 <p class="text-medium-30-l5" data-i18n="preview.button">OUR SERVICE</p>
                 <span></span>
             </a>
