--- a/pages/FAQ/FAQ.html
+++ b/pages/FAQ/FAQ.html
@@ -27,7 +27,16 @@
         </nav> 
         <div class="burger-menu">
             <div></div><div></div><div></div>
-        </div>     
+        </div>  
+        <div class="menu">
+            <p class="text-demi-32-l5">Menu</p>
+            <a href="../../index.html" class="text-medium-30" data-i18n-common="header.menu.home">Home</a>
+            <a href="../../pages/services/services.html" class="text-medium-30" data-i18n-common="header.menu.services">Services</a>
+            <a href="../../pages/gallery/gallery.html" class="text-medium-30" data-i18n-common="header.menu.gallery">Gallery of works</a>
+            <a href="../../pages/contacts/contacts.html" class="text-medium-30" data-i18n-common="header.menu.contacts">Contacts</a>
+            <a href="../../pages/FAQ/FAQ.html" class="text-medium-30" data-i18n-common="header.menu.FAQ">FAQ</a>
+        </div>
+        <div class="overlay"></div>      
     </header>
     <main>
         <section class="answer">
