feat: add change palette (but no good colors)

--- a/pages/profile/profile.html
+++ b/pages/profile/profile.html
@@ -114,8 +114,9 @@
                                 <p class="text-demi-s16-l5 option-select" data-i18n="personal.text.palette">palette</p>
                                 <img src="../../assets/icons/arrow.svg" alt="">
                                 <div class="select-option">
-                                    <p>1</p>
-                                    <p>2</p>
+                                    <p class="text-demi-s16-h24-l5 option" value="default" data-i18n="personal.palette.default">Default</p>
+                                    <p class="text-demi-s16-h24-l5 option" value="alternative1" data-i18n="personal.palette.option1">Option 1</p>
+                                    <p class="text-demi-s16-h24-l5 option" value="alternative2" data-i18n="personal.palette.option2">Option 2</p>
                                 </div>
                             </div>
                         </div>
