feat: add setting button in header

--- a/pages/profile/profile.html
+++ b/pages/profile/profile.html
@@ -82,7 +82,7 @@
                     </div>
                 </div>
             </div>
-            <div class="personal-box">
+            <div class="personal-box" id="settingBox">
                 <div id="setting" class="personal-container">
                     <p class="text-demi-30-l5" data-i18n="personal.header.setting">setting</p>
                     <div>
