fix: fix type input on registration&authorization

--- a/pages/registration/registration.html
+++ b/pages/registration/registration.html
@@ -76,7 +76,7 @@
                     </div>
                     <div class="form" id="password">
                         <input type="text" placeholder="password">
-                        <p class="text-demi-s16-h20-l5 generateError">Please try again later. Enter your username</p>
+                        <p class="text-demi-s16-h20-l5 generateError">Please try again later. Enter your password</p>
                         <p class="text-demi-s16-h20-l5 one">The password must include at least one lowercase letter</p>
                         <p class="text-demi-s16-h20-l5 two">The password must include at least one capital letter</p>
                         <p class="text-demi-s16-h20-l5 three">The password must include at least one circe</p>
@@ -84,7 +84,8 @@
                         <p class="text-demi-s16-h20-l5 five">The password must contain 8-20 characters</p>
                         <p class="text-demi-s16-h20-l5 six">The password should not be among the top 100 passwords of 2023</p>
                         <p class="text-medium-14-l5 generate" id="passwordGenerate">generate</p>
-                        <img class="hide" src="../../assets/icons/hide.svg" alt="" id="showHide">
+                        <img class="hide" src="../../assets/icons/hide.svg" alt="">
+                        <p class="hide" id="showHide">h</p>
                     </div>
                     <div class="form" id="repeatThePassword">
                         <input type="text" placeholder="repeat the password">
