--- a/pages/authorization/authorization.html
+++ b/pages/authorization/authorization.html
@@ -49,7 +49,7 @@
                         <p class="text-demi-s16-h20-l5">there is no such login</p>
                     </div>
                     <div class="form" id="password">
-                        <input type="text" placeholder="password">
+                        <input type="password" placeholder="password">
                         <p class="text-demi-s16-h20-l5">invalid password</p>
                     </div>
                     <button class="half" id="authorization">
