fix: add translate for auth&reg

--- a/pages/authorization/authorization.html
+++ b/pages/authorization/authorization.html
@@ -41,19 +41,19 @@
     <main>
         <section class="authorization">
             <div class="text-section">
-                <p class="text-demi-52-l5">authorization</p>
+                <p class="text-demi-52-l5" data-i18n="header.textOur">authorization</p>
                 <div class="separators"></div>
                 <div class="input-container">
-                    <div class="form" id="login">
-                        <input type="text" placeholder="login">
-                        <p class="text-demi-s16-h20-l5">there is no such login</p>
+                    <div class="form" id="login" >
+                        <input type="text" placeholder="login" data-i18n="placeholder.login">
+                        <p class="text-demi-s16-h20-l5" data-i18n="error.login">there is no such login</p>
                     </div>
                     <div class="form" id="password">
-                        <input type="password" placeholder="password">
-                        <p class="text-demi-s16-h20-l5">invalid password</p>
+                        <input type="password" placeholder="password" data-i18n="placeholder.password">
+                        <p class="text-demi-s16-h20-l5" data-i18n="error.password">invalid password</p>
                     </div>
                     <button class="half" id="authorization">
-                        <p class="text-demi-24-l5">Authorization</p>
+                        <p class="text-demi-24-l5" data-i18n="text.auth">Authorization</p>
                         <span></span>
                     </button>
                 </div>
