--- a/pages/registration/registration.html
+++ b/pages/registration/registration.html
@@ -41,63 +41,63 @@
     <main>
         <section class="registration">
             <div class="text-section">
-                <p class="text-demi-52-l5" data-i18n-common="registration.header.textOur">registration</p>
+                <p class="text-demi-52-l5" data-i18n="header.textOur">registration</p>
                 <div class="separators"></div>
                 <div class="input-container">
                     <div class="form" id="name">
-                        <input type="text" placeholder="name">
-                        <p class="text-demi-s16-h20-l5">name must contain 2 to 20 characters</p>
+                        <input type="text" placeholder="name" data-i18n="placeholder.name">
+                        <p class="text-demi-s16-h20-l5" data-i18n="error.name">name must contain 2 to 20 characters</p>
                     </div>
                     <div class="form" id="surname">
-                        <input type="text" placeholder="surname">
-                        <p class="text-demi-s16-h20-l5">surname must contain 2 to 20 characters</p>
+                        <input type="text" placeholder="surname" data-i18n="placeholder.surname">
+                        <p class="text-demi-s16-h20-l5" data-i18n="error.surname">surname must contain 2 to 20 characters</p>
                     </div>
                     <div class="form" id="patronymic">
-                        <input type="text" placeholder="patronymic (optional)">
-                        <p class="text-demi-s16-h20-l5">no more than 20 characters <br> (*optional field)</p>
+                        <input type="text" placeholder="patronymic (optional)" data-i18n="placeholder.patronymic">
+                        <p class="text-demi-s16-h20-l5" data-i18n="error.patronymic">no more than 20 characters <br> (*optional field)</p>
                     </div>
                     <div class="form" id="telephone">
-                        <input type="text" placeholder="telephone">
-                        <p class="text-demi-s16-h20-l5">number corresponds to +375 (xx) xxx-xx-xx</p>
+                        <input type="text" placeholder="telephone" data-i18n="placeholder.telephone">
+                        <p class="text-demi-s16-h20-l5" data-i18n="error.telephone">number corresponds to +375 (xx) xxx-xx-xx</p>
                     </div>
                     <div class="form" id="email">
-                        <input type="text" placeholder="email">
-                        <p class="text-demi-s16-h20-l5">email must contain 2 to 30 characters and match ...@gmail.com</p>
+                        <input type="text" placeholder="email" data-i18n="placeholder.email">
+                        <p class="text-demi-s16-h20-l5" data-i18n="error.email">email must contain 2 to 30 characters and match ...@gmail.com</p>
                     </div>
                         <div class="form" id="date">
-                        <input type="text" placeholder="date of birth">
-                        <p class="text-demi-s16-h20-l5">There is no such date.<br>Only for users over the age of 16</p>
+                        <input type="text" placeholder="date of birth" data-i18n="placeholder.date"> 
+                        <p class="text-demi-s16-h20-l5" data-i18n="error.date">There is no such date.<br>Only for users over the age of 16</p>
                     </div>
                     <div class="form" id="login">
-                        <input type="text" placeholder="login">
-                        <p class="text-demi-s16-h20-l5 use">This username is busy</p>
-                        <p class="text-demi-s16-h20-l5 generateError">Please try again later. Enter your username</p>
-                        <p class="text-medium-14-l5 generate" id="loginGenerate">generate</p>
+                        <input type="text" placeholder="login" data-i18n="placeholder.login">
+                        <p class="text-demi-s16-h20-l5 use" data-i18n="error.busy">This username is busy</p>
+                        <p class="text-demi-s16-h20-l5 generateError" data-i18n="error.laterLogin">Please try again later. Enter your username</p>
+                        <p class="text-medium-14-l5 generate" id="loginGenerate" data-i18n="text.generate">generate</p>
                     </div>
                     <div class="form" id="password">
-                        <input type="text" placeholder="password">
-                        <p class="text-demi-s16-h20-l5 generateError">Please try again later. Enter your password</p>
-                        <p class="text-demi-s16-h20-l5 one">The password must include at least one lowercase letter</p>
-                        <p class="text-demi-s16-h20-l5 two">The password must include at least one capital letter</p>
-                        <p class="text-demi-s16-h20-l5 three">The password must include at least one circe</p>
-                        <p class="text-demi-s16-h20-l5 four">The password must include at least one special character</p>
-                        <p class="text-demi-s16-h20-l5 five">The password must contain 8-20 characters</p>
-                        <p class="text-demi-s16-h20-l5 six">The password should not be among the top 100 passwords of 2023</p>
-                        <p class="text-medium-14-l5 generate" id="passwordGenerate">generate</p>
+                        <input type="text" placeholder="password" data-i18n="placeholder.password"> 
+                        <p class="text-demi-s16-h20-l5 generateError" data-i18n="error.laterPassword">Please try again later. Enter your password</p>
+                        <p class="text-demi-s16-h20-l5 one" data-i18n="error.1">The password must include at least one lowercase letter</p>
+                        <p class="text-demi-s16-h20-l5 two" data-i18n="error.2">The password must include at least one capital letter</p>
+                        <p class="text-demi-s16-h20-l5 three" data-i18n="error.3">The password must include at least one circe</p>
+                        <p class="text-demi-s16-h20-l5 four" data-i18n="error.4">The password must include at least one special character</p>
+                        <p class="text-demi-s16-h20-l5 five" data-i18n="error.5">The password must contain 8-20 characters</p>
+                        <p class="text-demi-s16-h20-l5 six" data-i18n="error.6">The password should not be among the top 100 passwords of 2023</p>
+                        <p class="text-medium-14-l5 generate" id="passwordGenerate" data-i18n="text.generate">generate</p>
                         <img class="hide" src="../../assets/icons/hide.svg" alt="">
                         <p class="hide" id="showHide">h</p>
                     </div>
                     <div class="form" id="repeatThePassword">
-                        <input type="text" placeholder="repeat the password">
-                        <p class="text-demi-s16-h20-l5">passwords don't match</p>
+                        <input type="text" placeholder="repeat the password" data-i18n="placeholder.repeatThePassword">
+                        <p class="text-demi-s16-h20-l5"  data-i18n="error.noMatch">passwords don't match</p>
                     </div>
                     <label class="custom-checkbox" id="agree">
                         <input type="checkbox" />
                         <span class="checkmark"></span>
-                        <p class="text-demi-s16-l5" data-i18n="personal.text.version">User Agreement</p>
+                        <p class="text-demi-s16-l5" data-i18n="text.agree">User Agreement</p>
                     </label>
                     <button class="half" id="registration">
-                        <p class="text-demi-24-l5">Registration</p>
+                        <p class="text-demi-24-l5" data-i18n="text.reg">Registration</p>
                         <span></span>
                     </button>
                 </div>
