fix: last fix a small thing

--- a/pages/profile/profile.html
+++ b/pages/profile/profile.html
@@ -115,8 +115,8 @@
                                 <img src="../../assets/icons/arrow.svg" alt="">
                                 <div class="select-option">
                                     <p class="text-demi-s16-h24-l5 option" value="default" data-i18n="personal.palette.default">Default</p>
-                                    <p class="text-demi-s16-h24-l5 option" value="alternative1" data-i18n="personal.palette.option1">Option 1</p>
-                                    <p class="text-demi-s16-h24-l5 option" value="alternative2" data-i18n="personal.palette.option2">Option 2</p>
+                                    <p class="text-demi-s16-h24-l5 option" value="alternative1" data-i18n="personal.palette.alternative1">Option 1</p>
+                                    <p class="text-demi-s16-h24-l5 option" value="alternative2" data-i18n="personal.palette.alternative2">Option 2</p>
                                 </div>
                             </div>
                         </div>
