fix: change .svg image on .jpg

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </header>
     <main>
         <section class="preview">
-            <img src="./assets/images/car.svg" alt="">
+            <img src="./assets/images/car.jpg" alt="">
             <p class="text-bold-150" data-i18n="preview.upText">CAR MUSC</p>
             <div class="separators"></div>
             <p class="text-medium-36" data-i18n="preview.downText">Car detailing: perfect cleanliness and body protection. Trust us to take care of your car!</p>
@@ -95,14 +95,14 @@
                 <div class="separators"></div>
             </div>
             <div class="our-work-box">
-                <img src="./assets/images/work1.svg" alt="">
-                <img src="./assets/images/work2.svg" alt="">
-                <img src="./assets/images/work3.svg" alt="">
-                <img src="./assets/images/work4.svg" alt="">
-                <img src="./assets/images/work5.svg" alt="">
-                <img src="./assets/images/work6.svg" alt="">
-                <img src="./assets/images/work7.svg" alt="">
-                <img src="./assets/images/work8.svg" alt="">
+                <img src="./assets/images/work1.jpg" alt="">
+                <img src="./assets/images/work2.jpg" alt="">
+                <img src="./assets/images/work3.jpg" alt="">
+                <img src="./assets/images/work4.jpg" alt="">
+                <img src="./assets/images/work5.jpg" alt="">
+                <img src="./assets/images/work6.jpg" alt="">
+                <img src="./assets/images/work7.jpg" alt="">
+                <img src="./assets/images/work8.jpg" alt="">
             </div>
         </section>  
         <section class="question">
