--- a/pages/gallery/gallery.html
+++ b/pages/gallery/gallery.html
@@ -65,14 +65,14 @@
                 <div class="separators"></div>
             </div>
             <div class="our-work-box">
-                <img src="../../assets/images/work1.svg" alt="">
-                <img src="../../assets/images/work2.svg" alt="">
-                <img src="../../assets/images/work3.svg" alt="">
-                <img src="../../assets/images/work4.svg" alt="">
-                <img src="../../assets/images/work5.svg" alt="">
-                <img src="../../assets/images/work6.svg" alt="">
-                <img src="../../assets/images/work7.svg" alt="">
-                <img src="../../assets/images/work8.svg" alt="">
+                <img src="../../assets/images/work1.jpg" alt="">
+                <img src="../../assets/images/work2.jpg" alt="">
+                <img src="../../assets/images/work3.jpg" alt="">
+                <img src="../../assets/images/work4.jpg" alt="">
+                <img src="../../assets/images/work5.jpg" alt="">
+                <img src="../../assets/images/work6.jpg" alt="">
+                <img src="../../assets/images/work7.jpg" alt="">
+                <img src="../../assets/images/work8.jpg" alt="">
             </div>
         </section>
         <section class="request-service">
