fix: fix some moment in code

--- a/pages/gallery/gallery.html
+++ b/pages/gallery/gallery.html
@@ -88,8 +88,7 @@
                         <p class="text-demi-s16-l5 option-select" data-i18n="request-service.service">service</p>
                         <img src="../../assets/icons/arrow.svg" alt="">
                         <div class="select-option">
-                            <p>1</p>
-                            <p>2</p>
+                            <p class="text-demi-s16-l5">it is decoration</p>
                         </div>
                     </div>
                 </div>
